force-app/main/default/objects/DC_DC_Circuit__c/DC_DC_Circuit__c.object-meta.xml
<CustomObject>
    <label>DC Circuit</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DC Circuits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>