force-app/main/default/objects/DC_DC_Circuit__c/fields/Amperage__c.field-meta.xml
<CustomField>
    <fullName>Amperage__c</fullName>
    <description>Amp rating of this circuit.</description>
    <label>Amperage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
                <default>true</default>
                <label>20</label>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>