force-app/main/default/objects/DC_DC_Circuit__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Asset allocated to this DC Circuit.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>DC Circuits</relationshipLabel>
    <relationshipName>DC_Circuits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>