force-app/main/default/objects/DC_DC_Circuit__c/fields/Associated_Space_Type__c.field-meta.xml
<CustomField>
    <fullName>Associated_Space_Type__c</fullName>
    <label>Associated Space Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cabinet</fullName>
                <default>true</default>
                <label>Cabinet</label>
            </value>
            <value>
                <fullName>Rack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>