force-app/main/default/objects/DC_DC_Circuit__c/fields/Cabinet__c.field-meta.xml
<CustomField>
    <fullName>Cabinet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Cabinet this Circuit Breaker is connected to.</description>
    <label>Cabinet</label>
    <referenceTo>DC_Cabinet__c</referenceTo>
    <relationshipLabel>DC Circuits</relationshipLabel>
    <relationshipName>DC_Circuits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>