force-app/main/default/objects/DC_DC_Circuit__c/fields/Committed_Power__c.field-meta.xml
<CustomField>
    <fullName>Committed_Power__c</fullName>
    <description>The committed power allowed on this circuit, per the associated Service Order.</description>
    <label>Committed Power</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>