force-app/main/default/objects/DC_DC_Circuit__c/fields/Connected_Power__c.field-meta.xml
<CustomField>
    <fullName>Connected_Power__c</fullName>
    <formula>(VAlUE(TEXT(Amperage__c)) * VALUE(TEXT(Voltage__c)) * 0.8) /1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connected Power</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>