force-app/main/default/objects/DC_DC_Circuit__c/fields/DC_Plant__c.field-meta.xml
<CustomField>
    <fullName>DC_Plant__c</fullName>
    <description>The DC Plant this DC Circuit is connected to.</description>
    <label>DC Plant</label>
    <referenceTo>DC_DC_Plant__c</referenceTo>
    <relationshipLabel>DC Circuits</relationshipLabel>
    <relationshipName>DC_Circuits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>