force-app/main/default/objects/DC_DC_Circuit__c/fields/Rack__c.field-meta.xml
<CustomField>
    <fullName>Rack__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Rack this Circuit Breaker is connected to.</description>
    <label>Rack</label>
    <referenceTo>DC_Rack__c</referenceTo>
    <relationshipLabel>DC Circuits</relationshipLabel>
    <relationshipName>DC_Circuits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>